--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="main.1e25d669b6d9ce0f5eeb.css?3a475c6aaf3866330038">
+    <link rel="stylesheet" href="main.1e25d669b6d9ce0f5eeb.css">
   </head>
   <body>
-    <script src="main.1e25d669b6d9ce0f5eeb.js?3a475c6aaf3866330038"></script>
+    <script src="main.1e25d669b6d9ce0f5eeb.js"></script>
   </body>
 </html>
