--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="main.1e25d669b6d9ce0f5eeb.css">
+    <link rel="stylesheet" type="text/css" href="main.1e25d669b6d9ce0f5eeb.css">
   </head>
   <body>
-    <script src="main.1e25d669b6d9ce0f5eeb.js"></script>
+    <script type="text/javascript" src="main.1e25d669b6d9ce0f5eeb.js"></script>
   </body>
 </html>
