--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<html lang="en-US">
   <head>
-    <link rel="stylesheet" type="text/css" href="main.3a7eab2a04c1e4f8a651.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="main.cb5211bf54481f2e92ae.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="main.3a7eab2a04c1e4f8a651.js"></script>
+    <script type="text/javascript" src="main.cb5211bf54481f2e92ae.js"></script>
   </body>
 </html>
