--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
+    <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="main.a48e48ab600a850cdf70.css">
   </head>
   <body>
