--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=1920">
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="main.a48e48ab600a850cdf70.css">
   </head>
