--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1920">
+    <link rel="apple-touch-icon" href="src/images/covers/beauty-of-night.jpg">
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="main.a48e48ab600a850cdf70.css">
   </head>
