--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1920">
     <link rel="apple-touch-icon" href="src/images/covers/beauty-of-night.jpg">
+    <meta name="theme-color" content="#f0b937" />
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="main.a48e48ab600a850cdf70.css">
   </head>
