--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1920">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="src/images/covers/beauty-of-night.jpg">
     <meta name="theme-color" content="#f0b937" />
     <link rel="manifest" href="manifest.json"/>
